# Fl-Plugin

./: .gitignore  CMakeLists.txt  FL Plug-in.jucer
JuceLibraryCode/: AppConfig.h  JuceHeader.h
Source/: FruityPlugin.def  PluginInterface.cpp  PluginInterface.h  PluginInterfaceSEHWrapper.cpp  PluginInterfaceSEHWrapper.h
Source/fpsdk/: fp_cplug.cpp  fp_cplug.h  fp_def.h  fp_extra.cpp  fp_extra.h  fp_plugclass.cpp  fp_plugclass.h  generictransport.h
Source/illuminations/network/: AddressInfo.cpp  AddressInfo.h  IlluminationServer.cpp  IlluminationServer.h  StreamConnection.cpp  StreamConnection.h  Utils.cpp  Utils.h
Source/interface/: DllEntry.cpp  IPlugin.h  IPluginGUI.h  Param.cpp  Param.h  ParamManager.cpp  ParamManager.h  Utils.cpp  Utils.h
Source/plugin/: EditorWindow.cpp  EditorWindow.h  LightSynthesizer.cpp  LightSynthesizer.h  Plugin.cpp  Plugin.h
Source/ui/: ControllerComponent.h  SliderEx.cpp  SliderEx.h
Source/ui/utils/: Console.cpp  Console.h  CursorUtils.cpp  CursorUtils.h  ValueFormatters.h
